# p2pfl

./: Dockerfile  docker-compose.yml  federated_flow.md
aegis_api/: README.md  pyproject.toml
aegis_api/app/: main.py
aegis_api/app/models/: node.py
aegis_api/app/routers/: nodes.py
aegis_api/app/services/: demo_nodes.py  node_service.py
p2pfl/: node.py  pyproject.toml
p2pfl/communication/commands/weights/: full_model_command.py  init_model_command.py
p2pfl/communication/protocols/: gossiper.py
p2pfl/communication/protocols/grpc/: grpc_neighbors.py  grpc_server.py
p2pfl/communication/protocols/memory/: memory_neighbors.py  memory_server.py
p2pfl/examples/: expose_node.py  node1.py  node2.py  node3.py  node_api_combined.py
p2pfl/stages/base_node/: gossip_model_stage.py  round_finished_stage.py  start_learning_stage.py  train_stage.py  vote_train_set_stage.py  wait_agg_models_stage.py
